--- a/app.css
+++ b/app.css
@@ -10,11 +10,11 @@ body {
 }
 
 .button {
-	margin: 1vh;
-	font-size: 1vw;
+	margin: 1vw;
+	font-size: 5vh;
 	padding: 1vw;
 	background: white;
-	border: 2px solid #899870;
-	border-radius: 0.5vw;
+	border: 0.5vh solid #899870;
+	border-radius: 2vh;
 	cursor: pointer;
 }
